([[c:GR|GR]]) [[c:COM:Duplicate|Duplicate]]: [[File:Pinksteren Giotto Padua.jpg]] → [[File:Pentecoste Giotto Padua.jpg]] Exact or scaled-down duplicate: [[c::File:Pentecoste Giotto Padua.jpg]]

--- a/Pinkster.mw
+++ b/Pinkster.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Pinksteren Giotto Padua.jpg|right|250px|thumb|Pinkster, schilderd deur [[Giotto di Bondone]] ]]
+[[Ofbeelding:Pentecoste Giotto Padua.jpg|right|250px|thumb|Pinkster, schilderd deur [[Giotto di Bondone]] ]]
 '''Pinkster''' (ien t [[Grieks]]: ''πεντηκοστή [‘ημέρα], pentekostè [hèmera]'', letterlek: ''vieftegste dag'') is n feest dat zowel ien t [[jodendom|jeudendom]] as ien t [[christendom|kristendom]] vierd wordt.
 
 == Kristelk feest ==
