Wysigingen döär [[Special:Contributions/109.37.154.134|109.37.154.134]] ([[User talk:109.37.154.134|oaverleg]]) weaderümmedraid tot de lätste versy van [[User:Bdijkstra|Bdijkstra]]

--- a/Kasteel_De_Cannenburgh.mw
+++ b/Kasteel_De_Cannenburgh.mw
@@ -1,4 +1,7 @@
-
+[[Bestaand:Cannen_veur.jpg|thumb|Den Cannenburgh, veurkante]]
+[[Bestaand:Maarten_van_rossum.jpg|thumb|Maarten van Rossum]]
+[[Bestaand:Vaassen cannenburg.jpg|thumb|Den Cannenburgh, achterkante]]
+'''Kasteel De Cannenburgh''' is n [[16e eeuw]]s kasteel in [[Vaossen]]. 
 
 t Kasteel is ebouwd op de resten van n older kasteel, waorvan de vrogste beschrieving uut 1365 kump. Sporen van dit vroggere verstärkte huus bint nog te bekieken in de kelder van t kasteel.
 
