--- a/Ooststellingwarf.mw
+++ b/Ooststellingwarf.mw
@@ -140,6 +140,41 @@ Veur et gebruuk van et [[Stellingwarfs]], [[Westlaauwers Frais|Fries]] en [[Nede
 
 In 2011 wodde deur de [[Frieslaand|Perveensie Fryslân]] een quick-scan holden. Doe praotte in Oost-Stellingwarf nog 11% Stellingwarfs, 39% Fries en 50% Nederlaans. Hierdeur kan dus vaastesteld wodden dat de gemiente in de laeste vuuftig jaor meer an et vernederlaansen dan an et verfriesen is. Uut een taeltelling uut 2005, daon deur [[Henk Bloemhoff]], is niet de thuustael onderzocht, mar hoe goed meensken et Stellingwarfs praoten kunnen. Daoruut doet blieken dat haost de helft van de ienwoners van Oost-Stellingwarf, zo'n 48,9%, et Stellingwarfs redelik tot goed praoten kunnen. Echter, de Stellingwarfstaeligen in zowel Oost-Stellingwarf as in West-Stellingwarf bin veur een groot diel ooldere meensken.<ref>[http://www.frieschdagblad.nl/index.asp?artID=55406 Pieter Jonker niet somber over Stellingwerfs] artikel in 't Friesch Dagblad van 1 juli 2011</ref> 
 
+== Gemienteroad ==
+Uitslag verkiezingen van de gemienteroad sinds 1998:<ref>[https://www.nlverkiezingen.com/GR_FR.html Ooststellingwerf], nlverkiezingen.com</ref>
+
+{| class="wikitable sortable" style="text-align:center;"
+!colspan="16"|Gemienteroadszetels
+|-
+! Partie || 1998 || 2002 || 2006 || 2010 || 2014 <ref>[https://www.verkiezingsuitslagen.nl/verkiezingen/detail/GR20140319/613176 Ooststellingwerf], Kiesraad </ref> || 2018 || 2022
+|-
+| style="text-align:left;"| OoststellingwerfsBelang || || || 4 || 7 || 6 || 7 || 5
+|-
+| style="text-align:left;"| [[GroenLinks]] || 2 || 2 || 1 || 1 || 2 || 2 || 3
+|-
+| style="text-align:left;"| [[PvdA]] || 8 || 7 || 8 || 5 || 4 || 3 || 3
+|-
+| style="text-align:left;"| [[CDA]] || 5 || 6 || 4 || 4 || 4 || 3 || 2
+|-
+| style="text-align:left;"| [[VVD]] || 4 || 4 || 3 || 2 || 2 || 3 || 2
+|-
+| style="text-align:left;"| Vrije Partij Ooststellingwerf || || || || || || || 2
+|-
+| style="text-align:left;"| Lokaal Sociaal Ooststellingwerf || || || || || || || 2
+|-
+| style="text-align:left;"| [[ChristenUnie]] ¹ || 1 || 1 || 1 || 1 || 1 || 1 || 1
+|-
+| style="text-align:left;"| [[D66]] || 1 || 1 || || 1 || 1 || 1 || 1
+|-
+| style="text-align:left;"| StellingwerfPlus || || || || || 1 || 1 || 
+|-
+! Totaal || 21 || 21 || 21 || 21 || 21 || 21 || 21
+|-
+! Opkomst || 63,2% || 59,5% || 63,7% || 56,9% || 55,7% || 54,3% || 52,5%
+|}
+
+¹ [[GPV]] in 1998
+
 ==Referenties==
 <references/>
 
