--- a/Weststellingwarf.mw
+++ b/Weststellingwarf.mw
@@ -110,6 +110,44 @@ Op [[1 jannewaori]] [[2011]] woonden 25.846 meensken in de gemiente Weststelling
 * [[1811]] - 5.428
 * [[1714]] - 3.592
 
+== Gemienteroad ==
+Uitslag verkiezingen van de gemienteroad sinds 1998:<ref>[https://www.nlverkiezingen.com/GR_FR.html Weststellingwerf], nlverkiezingen.com</ref>
+
+{| class="wikitable sortable" style="text-align:center;"
+!colspan="16"|Gemienteroadszetels
+|-
+! Partie || 1998 || 2002 || 2006 || 2010 || 2014 || 2018 || 2022
+|-
+| style="text-align:left;"| [[VVD]] || 3 || 4 || 4 || 5 || 5 || 5 || 4
+|-
+| style="text-align:left;"| Weststellingwerfs Belang || 1 || 4 || 3 || 3 || 3 || 2 || 4
+|-
+| style="text-align:left;"| [[CDA]] || 4 || 5 || 4 || 4 || 4 || 4 || 3
+|-
+| style="text-align:left;"| Sociaal Duurzaam Weststellingwerf * || || || || || || 5 || 3
+|-
+| style="text-align:left;"| Blijf Stellingwarfs || || || || || || 2 || 3
+|-
+| style="text-align:left;"| [[GroenLinks]] || 2 || 2 || 2 || 3 || 2 || 2 || 2
+|-
+| style="text-align:left;"| [[D66]] || || || || || || 1 || 2
+|-
+| style="text-align:left;"| [[PvdA]] * || 5 || 5 || 8 || 6 || 5 || || 
+|-
+| style="text-align:left;"| Weststellingwerf Natuurlijk! * || || || || || 1 || || 
+|-
+| style="text-align:left;"| Vrijheid Voor Allen * || || || || || 1 || || 
+|-
+| style="text-align:left;"| Sociaal Democratische Partij || 4 || 1 || || || || || 
+|-
+! Totaal || 19 || 21 || 21 || 21 || 21 || 21 || 21
+|-
+! Opkomst || 60,5% || 57,1% || 58,5% || 51,8% || 53,7% || 55,0% || 50,0%
+|}
+
+» * Sociaal Duurzaam Weststellingwerf: PvdA, Weststellingwerf Natuurlijk! en VVA.
+
+
 {{Weststellingwarf}}
 {{Frieslaand}}
 {{Commonscat|Weststellingwerf}}
