--- a/Auto.mw
+++ b/Auto.mw
@@ -1,10 +1,10 @@
 [[Bestaand:Bmw-f01-wiki-paultan.org.jpg|thumb|250px|Een automebiel van [[BMW]]]]
 [[Bestaand:Faceliftd Myvi.jpg|thumb|250px|Een wat kleinere auto]]
-Een '''auto''' of '''automebiel''' (vake in 't westen uut-espreuken as: ''otoo'') is een mit een moter an-edreven [[voertuug]] veur 't vervoeren van passesiers. Auto's bin ontwörpen um op de weg riejen, 't best is um op een [[teerweg]] te riejen, a-j mit een auto te vake op de [[zaandweg]] riejen he-j een grotere kans dat de onderdelen eerder kepot gaon. 
+Een '''Brommobiel''' of '''automebiel''' (vake in 't westen uut-espreuken as: ''otoo'') is een mit een moter an-edreven [[voertuug]] veur 't vervoeren van passesiers. Auto's bin ontwörpen um op de weg riejen, 't best is um op een [[teerweg]] te riejen, a-j mit een auto te vake op de [[zaandweg]] riejen he-j een grotere kans dat de onderdelen eerder kepot gaon. 
  
 Een auto riejt op braandstoffen, dit bin meestentieds [[bezine]], [[diesel (braandstof)|diesel]] of [[autogas]] mar tegensworig bin ze steeds vaker op zeuk naor nieje braandstoffen, bv. [[elektrische auto|elektrisch an-edreven auto's]], 't gebruuk van [[waoterstof]], [[ethanol]], [[methanol]], [[biomassa]] en gao zo mar deur.
  
-Nen wagen met ne kombinasie van nen tradisionelen motor en nieje technieken, meesttieds elektriese andrieving, neumt ze ne hybride.
+Nen wagen met ne kombinasie van nen tradisionelen motor en nieje technieken, meesttieds elektriese andrieving, neumt ze ne hybride. LEES DIT NIET OKE!!!! 
 
 == Geschiedenisse ==
 [[File:Benz_auto.jpg|thumb|Benz Auto, 1886]]
