--- a/Drenthe.mw
+++ b/Drenthe.mw
@@ -93,41 +93,47 @@ De [[Provinciaole Staoten]] bint veur 't lest kozen in meert [[2019]]. Oetslag i
 |-
 |'''Partie'''||'''Stemmen in %'''||'''Zetels'''||'''Stemmen in %'''||'''Zetels'''||'''Stemmen in %'''||'''Zetels'''||'''Stemmen in %'''||'''Zetels'''||'''Stemmen in %'''||'''Zetels'''
 |-
-|[[VVD]]||ALIGN="right"|18,0||ALIGN="right"|9||ALIGN="right"|16,7||ALIGN="right"|8||ALIGN="right"|...||ALIGN="right"|9||ALIGN="right"|...||ALIGN="right"|7||ALIGN="right"|...||ALIGN="right"|
+|[[PvdA]]||ALIGN="right"|36,5||ALIGN="right"|19||ALIGN="right"|27,2||ALIGN="right"|13||ALIGN="right"|...||ALIGN="right"|12||ALIGN="right"|...||ALIGN="right"|7||ALIGN="right"|...||ALIGN="right"|6
 |-
-|[[PvdA]]||ALIGN="right"|36,5||ALIGN="right"|19||ALIGN="right"|27,2||ALIGN="right"|13||ALIGN="right"|...||ALIGN="right"|12||ALIGN="right"|...||ALIGN="right"|7||ALIGN="right"|...||ALIGN="right"|
+|[[FVD]]||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|...||ALIGN="right"|6
 |-
-|[[CDA]]||ALIGN="right"|23,9||ALIGN="right"|12||ALIGN="right"|21,2||ALIGN="right"|10||ALIGN="right"|...||ALIGN="right"|6||ALIGN="right"|...||ALIGN="right"|6||ALIGN="right"|...||ALIGN="right"|
+|[[VVD]]||ALIGN="right"|18,0||ALIGN="right"|9||ALIGN="right"|16,7||ALIGN="right"|8||ALIGN="right"|...||ALIGN="right"|9||ALIGN="right"|...||ALIGN="right"|7||ALIGN="right"|...||ALIGN="right"|6
 |-
-|[[SP]]||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|12,3||ALIGN="right"|5||ALIGN="right"|...||ALIGN="right"|4||ALIGN="right"|...||ALIGN="right"|5||ALIGN="right"|...||ALIGN="right"|
+|[[CDA]]||ALIGN="right"|23,9||ALIGN="right"|12||ALIGN="right"|21,2||ALIGN="right"|10||ALIGN="right"|...||ALIGN="right"|6||ALIGN="right"|...||ALIGN="right"|6||ALIGN="right"|...||ALIGN="right"|5
 |-
-|[[Partij voor de Vrijheid|PVV]]||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|...||ALIGN="right"|4||ALIGN="right"|...||ALIGN="right"|5||ALIGN="right"|...||ALIGN="right"|
+|[[GroenLinks]]||ALIGN="right"|6,7||ALIGN="right"|4||ALIGN="right"|4,7||ALIGN="right"|2||ALIGN="right"|...||ALIGN="right"|2||ALIGN="right"|...||ALIGN="right"|2||ALIGN="right"|...||ALIGN="right"|4
 |-
-|[[D66]]||ALIGN="right"|3,7||ALIGN="right"|2||ALIGN="right"|1,9||ALIGN="right"|0||ALIGN="right"|...||ALIGN="right"|2||ALIGN="right"|...||ALIGN="right"|4||ALIGN="right"|...||ALIGN="right"|
+|[[Partij voor de Vrijheid|PVV]]||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|...||ALIGN="right"|4||ALIGN="right"|...||ALIGN="right"|5||ALIGN="right"|...||ALIGN="right"|3
 |-
-|[[ChristenUnie]] (CU)||ALIGN="right"|4,6||ALIGN="right"|2||ALIGN="right"|7,6||ALIGN="right"|3||ALIGN="right"|...||ALIGN="right"|2||ALIGN="right"|...||ALIGN="right"|3||ALIGN="right"|...||ALIGN="right"|
+|[[ChristenUnie]] (CU)||ALIGN="right"|4,6||ALIGN="right"|2||ALIGN="right"|7,6||ALIGN="right"|3||ALIGN="right"|...||ALIGN="right"|2||ALIGN="right"|...||ALIGN="right"|3||ALIGN="right"|...||ALIGN="right"|3
 |-
-|[[GroenLinks]]||ALIGN="right"|6,7||ALIGN="right"|4||ALIGN="right"|4,7||ALIGN="right"|2||ALIGN="right"|...||ALIGN="right"|2||ALIGN="right"|...||ALIGN="right"|2||ALIGN="right"|...||ALIGN="right"|
+|[[SP]]||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|12,3||ALIGN="right"|5||ALIGN="right"|...||ALIGN="right"|4||ALIGN="right"|...||ALIGN="right"|5||ALIGN="right"|...||ALIGN="right"|3
 |-
-|[[50Plus]]||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|...||ALIGN="right"|0||ALIGN="right"|...||ALIGN="right"|1||ALIGN="right"|...||ALIGN="right"|
+|[[D66]]||ALIGN="right"|3,7||ALIGN="right"|2||ALIGN="right"|1,9||ALIGN="right"|0||ALIGN="right"|...||ALIGN="right"|2||ALIGN="right"|...||ALIGN="right"|4||ALIGN="right"|...||ALIGN="right"|2
 |-
-|[[Sterk Lokaal]]||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|...||ALIGN="right"|1||ALIGN="right"|...||ALIGN="right"|
+|[[Sterk Lokaal]]||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|...||ALIGN="right"|1||ALIGN="right"|...||ALIGN="right"|1
 |-
-|[[SGP]]||ALIGN="right"|0,3||ALIGN="right"|0||ALIGN="right"|0,3||ALIGN="right"|0||ALIGN="right"|...||ALIGN="right"|0||ALIGN="right"|...||ALIGN="right"|0||ALIGN="right"|...||ALIGN="right"|
+|[[50Plus]]||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|...||ALIGN="right"|0||ALIGN="right"|...||ALIGN="right"|1||ALIGN="right"|...||ALIGN="right"|1
 |-
-|[[OPD]] '''*'''||ALIGN="right"|2,1||ALIGN="right"|1||ALIGN="right"|1,4||ALIGN="right"|0||ALIGN="right"|...||ALIGN="right"|0||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|...||ALIGN="right"|
+|[[Partij voor de Dieren]]||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|1,9||ALIGN="right"|0||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|...||ALIGN="right"|1
 |-
-|[[Partij voor de Dieren]]||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|1,9||ALIGN="right"|0||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|...||ALIGN="right"|
+|[[OPD]] '''*'''||ALIGN="right"|2,1||ALIGN="right"|1||ALIGN="right"|1,4||ALIGN="right"|0||ALIGN="right"|...||ALIGN="right"|0||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|...||ALIGN="right"|0
 |-
-|[[Actief Drenthe]]||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|1,9||ALIGN="right"|0||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|...||ALIGN="right"|
+|[[SGP]]||ALIGN="right"|0,3||ALIGN="right"|0||ALIGN="right"|0,3||ALIGN="right"|0||ALIGN="right"|...||ALIGN="right"|0||ALIGN="right"|...||ALIGN="right"|0||ALIGN="right"|...||ALIGN="right"|0
 |-
-|[[Partij voor het Noorden]]||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|1,1||ALIGN="right"|0||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|...||ALIGN="right"|
+|[[Senioren Belang]]||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|...||ALIGN="right"|0
 |-
-|[[Drents Belang / DOP]] '''***'''||ALIGN="right"|2,0||ALIGN="right"|1||ALIGN="right"|0,7||ALIGN="right"|0||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|...||ALIGN="right"|
+|[[DENK]]||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|...||ALIGN="right"|0
 |-
-|[[LPF]]'''**'''||ALIGN="right"|2,1||ALIGN="right"|1||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|...||ALIGN="right"|
+|[[Actief Drenthe]]||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|1,9||ALIGN="right"|0||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-
 |-
-|''Opkomst''||ALIGN="right"|''56,1''||ALIGN="right"|''51''||ALIGN="right"|''51,2''||ALIGN="right"|''41''||ALIGN="right"|''58,7''||ALIGN="right"|''41''||ALIGN="right"|''51,0''||ALIGN="right"|''41''||ALIGN="right"|...||ALIGN="right"|
+|[[Partij voor het Noorden]]||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|1,1||ALIGN="right"|0||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-
+|-
+|[[Drents Belang / DOP]] '''***'''||ALIGN="right"|2,0||ALIGN="right"|1||ALIGN="right"|0,7||ALIGN="right"|0||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-
+|-
+|[[LPF]]'''**'''||ALIGN="right"|2,1||ALIGN="right"|1||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-
+|-
+|''Opkomst''||ALIGN="right"|''56,1''||ALIGN="right"|''51''||ALIGN="right"|''51,2''||ALIGN="right"|''41''||ALIGN="right"|''58,7''||ALIGN="right"|''41''||ALIGN="right"|''51,0''||ALIGN="right"|''41''||ALIGN="right"|''58,8''||ALIGN="right"|''41''
 |}
 <div style="clear:left;"></div>
 '''*''' OPD: Onafhankelijke Partij Drenthe<br />
