--- a/Drenthe.mw
+++ b/Drenthe.mw
@@ -136,7 +136,7 @@ De [[Provinciaole Staoten]] bint veur 't lest kozen in meert [[2019]]. Oetslag i
 |-
 |[[LPF]]'''**'''||ALIGN="right"|2,1||ALIGN="right"|1||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-
 |-
-|''Opkomst''||ALIGN="right"|''56,1''||ALIGN="right"|''51''||ALIGN="right"|''51,2''||ALIGN="right"|''41''||ALIGN="right"|''58,7''||ALIGN="right"|''41''||ALIGN="right"|''51,0''||ALIGN="right"|''41''||ALIGN="right"|''58,8''||ALIGN="right"|''41''
+!''Opkomst''||ALIGN="right"|''56,1''||ALIGN="right"|''51''||ALIGN="right"|''51,2''||ALIGN="right"|''41''||ALIGN="right"|''58,7''||ALIGN="right"|''41''||ALIGN="right"|''51,0''||ALIGN="right"|''41''||ALIGN="right"|''58,8''||ALIGN="right"|''41''
 |}
 <div style="clear:left;"></div>
 '''*''' OPD: Onafhankelijke Partij Drenthe<br />
