--- a/Grunnen_(provìnzie).mw
+++ b/Grunnen_(provìnzie).mw
@@ -142,7 +142,7 @@ De [[Provinzjoale Stoaten]] binnen veur t lèst kozen in 2019.
 |-
 |
 {| class="wikitable sortable" style="float:left; margin-right:2em;"
-!colspan="11"| Uitslag Statenverkiezingen 2003, 2007, 2011, 2015 en 2019
+!colspan="11"| Uitslag Statenverkiezingen 2003-2019
 |-
 ! valign=top rowspan=2 | '''Partei''' || colspan=2 align=center | '''2003''' || colspan=2 align=center | '''2007'''|| colspan=2 align=center | '''2011'''|| colspan=2 align=center | '''2015''' || colspan=2 align=center | '''2019'''
 |-
