/* Proveensiale Staatn */ referentie

--- a/Oaveriessel.mw
+++ b/Oaveriessel.mw
@@ -45,7 +45,7 @@ t Gewest, dat vanof de opstaand teagn [[Philips II]] deel oetmaakn van de [[Repu
 == Bestuur ==
 
 === Proveensiale Staatn === 
-De [[Proveensiale Staatn]], t algemene bestuur van de proveensie, besteet oet 47 leedn dee alle veer joar in meert koazn wördt. 
+De [[Proveensiale Staatn]], t algemene bestuur van de proveensie, besteet oet 47 leedn dee alle veer joar in meert koazn wördt.<ref>[https://www.verkiezingsuitslagen.nl/verkiezingen?s=Provinciale+Staten&v=2003&t=2019 Verkiezingen Provinciale Staten 2019-2003], Kiesraad</ref>
 
 {| BORDER="0"
 |-
