--- a/Oaveriessel.mw
+++ b/Oaveriessel.mw
@@ -255,7 +255,10 @@ Belangrieke kraantn vuur de proveensie bint de [[Stentor]] en de [[Twentsche Cou
 == Wus ie det... ==
 In de [[Verienigde Staoten van Amerika|Amerikaanse]] staot [[Michigan]] lig de gemiente Overisel Township, enuumd naor Oaveriessel deur emigraanten van de Nederlaanse pervincie.
 
-== Oetgoande verwiezing ==
+== Verwiezingen ==
+<references/>
+
+== Oetgoande verwiezingen ==
 * [http://www.overijssel.nl Webstie van de proveensie ''Oaveriessel'']
 * [http://www.prv-overijssel.nl Bestuurlike webstie van de proveensie ''Oaveriessel'']
 
