--- a/Grunnen_(provìnzie).mw
+++ b/Grunnen_(provìnzie).mw
@@ -246,7 +246,7 @@ De [[Provinzjoale Stoaten]] binnen veur t lèst kozen in 2019.
 | align=right | - || align=right | -
 | align=right | - || align=right | -
 |-
-! Opkomst 
+! Opkomst / totoal
 ! align=right | ''55,5'' || align=right | ''55''
 ! align=right | ''51,0'' || align=right | ''43''
 ! align=right | ''58,2'' || align=right | ''43''
