--- a/Oaveriessel.mw
+++ b/Oaveriessel.mw
@@ -190,7 +190,7 @@ De [[Proveensiale Staatn]], t algemene bestuur van de proveensie, besteet oet 47
 | align=right |  || align=right | 
 | align=right |  || align=right | 
 |-
-! Opkomst 
+! Opkomst / totaol
 ! align=right | ''51,7'' || align=right | ''63''
 ! align=right | ''49,9'' || align=right | ''47''
 ! align=right | ''57,7'' || align=right | ''47''
