--- a/Drenthe.mw
+++ b/Drenthe.mw
@@ -90,7 +90,7 @@ De [[Provinciaole Staoten]] bint veur 't lest kozen in meert [[2019]]. Oetslag i
 |-
 |
 {| class="wikitable sortable" style="float:left; margin-right:2em;"
-!colspan="11"| Uitslag Statenverkiezingen 2003-2019
+!colspan="11"| Oetslag Staotenverkiezingen 2003-2019
 |-
 ! valign=top rowspan=2 | '''Partie''' || colspan=2 align=center | '''2003''' || colspan=2 align=center | '''2007'''|| colspan=2 align=center | '''2011'''|| colspan=2 align=center | '''2015''' || colspan=2 align=center | '''2019'''
 |-
