--- a/Gelderlaand.mw
+++ b/Gelderlaand.mw
@@ -20,7 +20,6 @@
 | webstee        = http://www.gelderland.nl/
 }}
 [[Bestaand:Prov-Gelderland-OpenTopo.jpg|thumb|Gelderlaand]]
-
 '''Gelderlaand''' ([[Nederlaands]]: {{Audio|Nl-Gelderland.oga|Gelderland}}) is n provinsie in t midden en t oosten van [[Nederlaand]]. t Grenst an zes aandere Nederlaandse provinsies en an Duutslaand: in t noordoosten an [[Oaveriessel|Overiessel]], in t oosten an de [[Duutslaand|Duutse]] [[dailstoat|deelstaot]] [[Noordrhain-Westfele|Noordrien-Westfaolen]], in t zujen an [[Limburg (Nederlaand)|Limburg]] en [[Noord-Braobaant]], in t uterste zuudwesten an [[Zuud-Hollaand]], in t westen an de provinsie [[Utrecht (provinsie)|Utrecht]], in t noordwesten an t [[Veluwemeer]], mit an de overkaante [[Flevolaand]]. De heufstad van de provinsie Gelderlaand is [[Arnem]].
 
 == Geografie ==
@@ -39,6 +38,136 @@ Deur Gelderlaand löp de rivier de [[Rien]] mit zien aoftakkingen de [[Waal (rev
 
 == Geschiedenisse ==
 {{Heufdartikel|Geskiedenis van Gelderlaand|vel}}
+
+== Bestuur ==
+
+{| BORDER="0"
+|-
+|
+{| class="wikitable sortable" style="float:left; margin-right:2em;"
+!colspan="11"| Uitslag Statenverkiezingen 2003-2019
+|-
+! valign=top rowspan=2 | '''Partei''' || colspan=2 align=center | '''2003''' || colspan=2 align=center | '''2007'''|| colspan=2 align=center | '''2011'''|| colspan=2 align=center | '''2015''' || colspan=2 align=center | '''2019'''
+|-
+! '''stemmen in %'''|| '''zetels''' || '''stemmen in %'''|| '''zetels'''|| '''stemmen in %'''|| '''zetels'''|| '''stemmen in %'''|| '''zetels''' || '''stemmen in %'''|| '''zetels'''
+|-
+| [[VVD]]
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right | 14,0 || align=right | 8
+|-
+| [[FVD]]
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right | 13,4 || align=right | 8
+|-
+| [[CDA]]
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right | 11,6 || align=right | 7
+|-
+| [[GL]]
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right | 10,8 || align=right | 6
+|-
+| [[PvdA]]
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right | 8,3 || align=right | 5
+|-
+| [[D66]]
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right | 7,2 || align=right | 4
+|-
+| [[CU]]
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right | 6,8 || align=right | 4
+|-
+| [[PVV]]
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right | 6,1 || align=right | 3
+|-
+| [[SP]]
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right | 5,8 || align=right | 3
+|-
+| [[SGP]]
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right | 5,3 || align=right | 3
+|-
+| [[PvdD]]
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right | 4,5 || align=right | 2
+|-
+| [[50+]]
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right | 3,8 || align=right | 2
+|-
+| [[DENK]]
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right | 1,2 || align=right | 0
+|-
+| Lokale Partijen Gelderland - Code Oranje
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right | 1,2 || align=right | 0
+|-
+| JEZUS LEEFT
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right | 0,1 || align=right | 0
+|-
+! Opkomst / totaol
+! align=right |  || align=right | 
+! align=right |  || align=right | 
+! align=right |  || align=right | 
+! align=right |  || align=right | 
+! align=right | ''58,6'' || align=right | ''55''
+|-
+|}
+| width="50" |
+|
+|
+|}
 
 == Grootste stejen ==
 Hieronder vie'j n overzichte van de grootste Gelderse stejen (naor t antal inwoeners):
