*Empty MediaWiki Message*

--- a/Italiaons.mw
+++ b/Italiaons.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Map_Italophone_World_-_updated.png|thumb|400px|Donkerblauw: ambtstaol; lichtblauw: vroggere ambtstaol; gruun: Italiaonstaolige gemeenschoppen]]
+[[Ofbeelding:Linguistic map of the Italian language.svg|thumb|400px|Donkerblauw: ambtstaol; lichtblauw: vroggere ambtstaol; gruun: Italiaonstaolige gemeenschoppen]]
 '''Italiaons''' is een taol die diel uutmak van de [[Romaans|Romaonse taolgroep]]. 't Wordt praot deur ongeveer 57 miljoen mèensen in [[Italië]], in verschillende [[dialekt|varianten]]. Partie van dizze variaanten verschillen zo staark van 't algemeeine Italiaons, dat ze ok as op zukzölf staonde taolen zeein wordt. 't Antal sprekers van 't algemeeine Italiaons in Italië is ongeveer 30 miljoen. Wereldwied bint der zo'n 63 miljoen Italiaonssprekenden.
 
 De oldste schreven Italiaonse teksten stammen oet de [[10e eeuw|10e ieuw]], mor der is veul meer materiaol terug te vinden oet de [[14e eeuw|14e ieuw]]. Oet dizze tied stammen de waarken van de beroemde klassieke Florentiense dichter [[Dante Alighieri]], mor ok de schrieverij van [[Francesco Petrarca]] en [[Giovanni Boccaccio]].
