--- a/Gelderlaand.mw
+++ b/Gelderlaand.mw
@@ -47,15 +47,15 @@ Deur Gelderlaand löp de rivier de [[Rien]] mit zien aoftakkingen de [[Waal (rev
 {| class="wikitable sortable" style="float:left; margin-right:2em;"
 !colspan="11"| Uitslag Statenverkiezingen 2003-2019
 |-
-! valign=top rowspan=2 | '''Partei''' || colspan=2 align=center | '''2003''' || colspan=2 align=center | '''2007'''|| colspan=2 align=center | '''2011'''|| colspan=2 align=center | '''2015''' || colspan=2 align=center | '''2019'''
+! valign=top rowspan=2 | '''Partie''' || colspan=2 align=center | '''2003''' || colspan=2 align=center | '''2007'''|| colspan=2 align=center | '''2011'''|| colspan=2 align=center | '''2015''' || colspan=2 align=center | '''2019'''
 |-
 ! '''stemmen in %'''|| '''zetels''' || '''stemmen in %'''|| '''zetels'''|| '''stemmen in %'''|| '''zetels'''|| '''stemmen in %'''|| '''zetels''' || '''stemmen in %'''|| '''zetels'''
 |-
 | [[VVD]]
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
+| align=right | 17,0 || align=right | 13
+| align=right | 16,6 || align=right | 9
+| align=right | 19,2 || align=right | 11
+| align=right | 15,8 || align=right | 9
 | align=right | 14,0 || align=right | 8
 |-
 | [[FVD]]
@@ -66,73 +66,73 @@ Deur Gelderlaand löp de rivier de [[Rien]] mit zien aoftakkingen de [[Waal (rev
 | align=right | 13,4 || align=right | 8
 |-
 | [[CDA]]
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
+| align=right | 31,1 || align=right | 24
+| align=right | 26,9 || align=right | 15
+| align=right | 16,2 || align=right | 9
+| align=right | 15,0 || align=right | 9
 | align=right | 11,6 || align=right | 7
 |-
 | [[GL]]
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
+| align=right | 6,6 || align=right | 5
+| align=right | 5,9 || align=right | 3
+| align=right | 6,2 || align=right | 4
+| align=right | 5,7 || align=right | 3
 | align=right | 10,8 || align=right | 6
 |-
 | [[PvdA]]
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
+| align=right | 22,9 || align=right | 18
+| align=right | 17,1 || align=right | 10
+| align=right | 16,6 || align=right | 9
+| align=right | 9,0 || align=right | 6
 | align=right | 8,3 || align=right | 5
 |-
 | [[D66]]
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
+| align=right | 3,9 || align=right | 3
+| align=right | 2,3 || align=right | 1
+| align=right | 8,1 || align=right | 4
+| align=right | 12,6 || align=right | 7
 | align=right | 7,2 || align=right | 4
 |-
 | [[CU]]
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
+| align=right | 4,6 || align=right | 3
+| align=right | 8,1 || align=right | 4
+| align=right | 4,9 || align=right | 3
+| align=right | 6,1 || align=right | 4
 | align=right | 6,8 || align=right | 4
 |-
 | [[PVV]]
 | align=right |  || align=right | 
 | align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
+| align=right | 10,4 || align=right | 6
+| align=right | 9,7 || align=right | 5
 | align=right | 6,1 || align=right | 3
 |-
 | [[SP]]
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
+| align=right | 5,6 || align=right | 4
+| align=right | 13,8 || align=right | 7
+| align=right | 9,8 || align=right | 5
+| align=right | 11,0 || align=right | 6
 | align=right | 5,8 || align=right | 3
 |-
 | [[SGP]]
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
+| align=right | 5,0 || align=right | 4
+| align=right | 4,9 || align=right | 3
+| align=right | 4,6 || align=right | 2
+| align=right | 6,0 || align=right | 3
 | align=right | 5,3 || align=right | 3
 |-
 | [[PvdD]]
 | align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
+| align=right | 2,2 || align=right | 1
+| align=right | 1,8 || align=right | 1
+| align=right | 3,3 || align=right | 2
 | align=right | 4,5 || align=right | 2
 |-
 | [[50+]]
 | align=right |  || align=right | 
 | align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
+| align=right | 2,0 || align=right | 1
+| align=right | 2,9 || align=right | 1
 | align=right | 3,8 || align=right | 2
 |-
 | [[DENK]]
@@ -142,25 +142,25 @@ Deur Gelderlaand löp de rivier de [[Rien]] mit zien aoftakkingen de [[Waal (rev
 | align=right |  || align=right | 
 | align=right | 1,2 || align=right | 0
 |-
-| Lokale Partijen Gelderland - Code Oranje
+| [[LPF]]
+| align=right | 2,2 || align=right | 1
 | align=right |  || align=right | 
 | align=right |  || align=right | 
 | align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right | 1,2 || align=right | 0
+| align=right |  || align=right |
 |-
-| JEZUS LEEFT
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right | 0,1 || align=right | 0
+| overig
+| align=right | 1,3 || align=right | 0
+| align=right | 2,3 || align=right | 0
+| align=right | 0,5 || align=right | 0
+| align=right | 2,8 || align=right | 0
+| align=right | 1,3 || align=right | 0
 |-
 ! Opkomst / totaol
-! align=right |  || align=right | 
-! align=right |  || align=right | 
-! align=right |  || align=right | 
-! align=right |  || align=right | 
+! align=right | ''51,2'' || align=right | ''75''
+! align=right | ''48,9'' || align=right | ''53''
+! align=right | ''58,6'' || align=right | ''55''
+! align=right | ''49,9'' || align=right | ''55''
 ! align=right | ''58,6'' || align=right | ''55''
 |-
 |}
