--- a/Oaveriessel.mw
+++ b/Oaveriessel.mw
@@ -45,7 +45,7 @@ t Gewest, dat vanof de opstaand teagn [[Philips II]] deel oetmaakn van de [[Repu
 == Bestuur ==
 
 === Proveensiale Staatn === 
-De [[Proveensiale Staatn]], t algemene bestuur van de proveensie, besteet oet 47 leedn dee alle veer joar in meert koazn wördt.<ref>[https://www.verkiezingsuitslagen.nl/verkiezingen?s=Provinciale+Staten&v=2003&t=2019 Verkiezingen Provinciale Staten 2019-2003], Kiesraad</ref>
+De [[Proveensiale Staatn]], t algemene bestuur van de proveensie, besteet oet 47 leedn dee alle veer joar in meert koazn wördt.<ref>[https://www.verkiezingsuitslagen.nl/verkiezingen?s=Provinciale+Staten&v=2003&t=2019 Verkiezingen Provinciale Staten 2003-2019], Kiesraad</ref>
 
 {| BORDER="0"
 |-
@@ -148,46 +148,18 @@ De [[Proveensiale Staatn]], t algemene bestuur van de proveensie, besteet oet 47
 | align=right |  || align=right | 
 | align=right | 1,2 || align=right | 0
 |-
-| LOKAAL OVERIJSSEL
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right | 1,8 || align=right | 0
-| align=right |  || align=right | 
-|-
-| Solidara
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right | 0,2 || align=right | 0
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-|-
-| LEEFBAAR OVERIJSSEL/VERENIGING SENIOREN PARTIJ
-| align=right |  || align=right | 
-| align=right | 0,5 || align=right | 0
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-|-
-| Nieuw Rechts
-| align=right |  || align=right | 
-| align=right | 0,4 || align=right | 0
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-|-
-| Fortuyn
-| align=right |  || align=right | 
-| align=right | 0,4 || align=right | 0
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-|-
 | [[LPF]]
 | align=right | 2,0 || align=right | 1
 | align=right |  || align=right | 
 | align=right |  || align=right | 
 | align=right |  || align=right | 
+| align=right |  || align=right | 
+|-
+| overig
+| align=right |  || align=right | 
+| align=right | 1,3 || align=right | 0
+| align=right | 0,2 || align=right | 0
+| align=right | 1,8 || align=right | 0
 | align=right |  || align=right | 
 |-
 ! Opkomst / totaol
