--- a/Oaveriessel.mw
+++ b/Oaveriessel.mw
@@ -162,12 +162,19 @@ De [[Proveensiale Staatn]], t algemene bestuur van de proveensie, besteet oet 47
 | align=right | 1,8 || align=right | 0
 | align=right |  || align=right | 
 |-
-! Opkomst / totaol
-! align=right | 51,7 || align=right | 63
-! align=right | 49,9 || align=right | 47
-! align=right | 57,7 || align=right | 47
-! align=right | 49,8 || align=right | 47
-! align=right | 59,3 || align=right | 47
+! Opkomst
+! align=right | 51,7 || align=right | 
+! align=right | 49,9 || align=right | 
+! align=right | 57,7 || align=right | 
+! align=right | 49,8 || align=right | 
+! align=right | 59,3 || align=right | 
+|-
+! Totaol
+! align=right | || align=right | 63
+! align=right | || align=right | 47
+! align=right | || align=right | 47
+! align=right | || align=right | 47
+! align=right | || align=right | 47
 |-
 |}
 | width="50" |
