--- a/Gelderlaand.mw
+++ b/Gelderlaand.mw
@@ -45,7 +45,7 @@ Deur Gelderlaand löp de rivier de [[Rien]] mit zien aoftakkingen de [[Waal (rev
 |-
 |
 {| class="wikitable sortable" style="float:left; margin-right:2em;"
-!colspan="11"| Uitslag Statenverkiezingen 2003-2019
+!colspan="11"| Uitslag Statenverkiezingen 2003-2019 <ref>[https://www.verkiezingsuitslagen.nl/verkiezingen?s=Provinciale+Staten&v=2003&t=2019 Verkiezingen Provinciale Staten 2003-2019], Kiesraad</ref>
 |-
 ! valign=top rowspan=2 | '''Partie''' || colspan=2 align=center | '''2003''' || colspan=2 align=center | '''2007'''|| colspan=2 align=center | '''2011'''|| colspan=2 align=center | '''2015''' || colspan=2 align=center | '''2019'''
 |-
@@ -156,12 +156,19 @@ Deur Gelderlaand löp de rivier de [[Rien]] mit zien aoftakkingen de [[Waal (rev
 | align=right | 2,8 || align=right | 0
 | align=right | 1,3 || align=right | 0
 |-
-! Opkomst / totaol
-! align=right | ''51,2'' || align=right | ''75''
-! align=right | ''48,9'' || align=right | ''53''
-! align=right | ''58,6'' || align=right | ''55''
-! align=right | ''49,9'' || align=right | ''55''
-! align=right | ''58,6'' || align=right | ''55''
+! Opkomst
+! align=right | 51,2 || align=right |
+! align=right | 48,9 || align=right |
+! align=right | 58,6 || align=right |
+! align=right | 49,9 || align=right |
+! align=right | 58,6 || align=right |
+|-
+! Totaol
+! align=right | || align=right | 75
+! align=right | || align=right | 53
+! align=right | || align=right | 55
+! align=right | || align=right | 55
+! align=right | || align=right | 55
 |-
 |}
 | width="50" |
