--- a/Gelderlaand.mw
+++ b/Gelderlaand.mw
@@ -261,6 +261,9 @@ Der bint in totaal 51 gemeentes.
 * [[Riek van Nimwaege|Riek van Nijmegen]]
 * [[Tielerweerd]]
 
+== Verwiezingen ==
+<references/>
+
 {{Gelderlaand}}
 {{Gelderse gebieden}}
 {{NederlaandseProvinsies}}
