--- a/Oaveriessel.mw
+++ b/Oaveriessel.mw
@@ -45,13 +45,13 @@ t Gewest, dat vanof de opstaand teagn [[Philips II]] deel oetmaakn van de [[Repu
 == Bestuur ==
 
 === Proveensiale Staatn === 
-De [[Proveensiale Staatn]], t algemene bestuur van de proveensie, besteet oet 47 leedn dee alle veer joar in meert koazn wördt.<ref>[https://www.verkiezingsuitslagen.nl/verkiezingen?s=Provinciale+Staten&v=2003&t=2019 Verkiezingen Provinciale Staten 2003-2019], Kiesraad</ref>
+De [[Proveensiale Staatn]], t algemene bestuur van de proveensie, besteet oet 47 leedn dee alle veer joar in meert koazn wördt.
 
 {| BORDER="0"
 |-
 |
 {| class="wikitable sortable" style="float:left; margin-right:2em;"
-!colspan="11"| Oetslag Staatnverkiezingen 2003-2019
+!colspan="11"| Oetslag Staatnverkiezingen 2003-2019 <ref>[https://www.verkiezingsuitslagen.nl/verkiezingen?s=Provinciale+Staten&v=2003&t=2019 Verkiezingen Provinciale Staten 2003-2019], Kiesraad</ref>
 |-
 ! valign=top rowspan=2 | '''Partie''' || colspan=2 align=center | '''2003''' || colspan=2 align=center | '''2007'''|| colspan=2 align=center | '''2011'''|| colspan=2 align=center | '''2015''' || colspan=2 align=center | '''2019'''
 |-
