/* Gedeputeerde Staatn */ update

--- a/Oaveriessel.mw
+++ b/Oaveriessel.mw
@@ -183,14 +183,15 @@ De [[Proveensiale Staatn]], t algemene bestuur van de proveensie, besteet oet 47
 |}
 
 === Gedeputeerde Staatn ===
-t Dagelikse bestuur is t kollege van Gedeputeerde Staatn. De proveensie Oaveriessel hef 5 gedeputeerdn. De regering van t laand hef [[Andries Heidema]] ([[CU]]) as [[Commisaris van de Koningin|Kommissoaris van de Könning]] ansteld.
+t Dagelikse bestuur is t kollege van Gedeputeerde Staatn. De proveensie Oaveriessel hef 6 gedeputeerdn. De regering van t laand hef [[Andries Heidema]] ([[CU]]) as [[Commisaris van de Koningin|Kommissoaris van de Könning]] ansteld.
 
-Gedeputeerdn:
+Gedeputeerdn:<ref>[https://www.overijssel.nl/bestuur/gedeputeerde-staten/ Gedeputeerdn], Oaveriessel</ref>
 * [[Eddy van Hijum]] - CDA
-* [[Hester Maij]] - CDA
+* [[Roy de Witte]] - CDA
 * [[Monique van Haaf]] - VVD
-* [[Erik Lievers]] - D66
+* [[Tijs de Bree]] - PvdA
 * [[Bert Boerman]] - CU
+* [[Gert Harm ten Bolscher]] - SGP
 
 == Gemeantes ==
 [[Ofbeelding:Kaart Overijssel genummerd.jpg|400px|thumb|{{center|Gemeantes van Oaveriessel}}]]
