--- a/Gelderlaand.mw
+++ b/Gelderlaand.mw
@@ -41,11 +41,13 @@ Deur Gelderlaand löp de rivier de [[Rien]] mit zien aoftakkingen de [[Waal (rev
 
 == Bestuur ==
 
+=== Provinsiale Staoten ===
+
 {| BORDER="0"
 |-
 |
 {| class="wikitable sortable" style="float:left; margin-right:2em;"
-!colspan="11"| Uitslag Statenverkiezingen 2003-2019 <ref>[https://www.verkiezingsuitslagen.nl/verkiezingen?s=Provinciale+Staten&v=2003&t=2019 Verkiezingen Provinciale Staten 2003-2019], Kiesraad</ref>
+!colspan="11"| Uitslag Staotenverkiezingen 2003-2019 <ref>[https://www.verkiezingsuitslagen.nl/verkiezingen?s=Provinciale+Staten&v=2003&t=2019 Verkiezingen Provinciale Staten 2003-2019], Kiesraad</ref>
 |-
 ! valign=top rowspan=2 | '''Partie''' || colspan=2 align=center | '''2003''' || colspan=2 align=center | '''2007'''|| colspan=2 align=center | '''2011'''|| colspan=2 align=center | '''2015''' || colspan=2 align=center | '''2019'''
 |-
