/* Bestuur */ Gedeputeerde Staoten

--- a/Gelderlaand.mw
+++ b/Gelderlaand.mw
@@ -178,6 +178,20 @@ Deur Gelderlaand löp de rivier de [[Rien]] mit zien aoftakkingen de [[Waal (rev
 |
 |}
 
+=== Gedeputeerde Staoten ===
+Gedeputeerde Staoten van Gelderlaand:<ref>[https://www.gelderland.nl/themas/politiek/gs/college-van-gedeputeerde-staten College van Gedeputeerde Staten], Provincie Gelderland</ref>
+
+Commissaris:
+* [[John Berends]] - CDA
+
+Gedeputeerden:
+* [[Jan Markink]] - VVD
+* [[Helga Witjes]] - VVD
+* [[Peter Drenth]] - CDA
+* [[Jan van der Meer]] - GL
+* [[Peter Kerris]] - PvdA
+* [[Peter van 't Hoog]] - CU
+
 == Grootste stejen ==
 Hieronder vie'j n overzichte van de grootste Gelderse stejen (naor t antal inwoeners):
 
