--- a/Oaveriessel.mw
+++ b/Oaveriessel.mw
@@ -183,9 +183,11 @@ De [[Proveensiale Staatn]], t algemene bestuur van de proveensie, besteet oet 47
 |}
 
 === Gedeputeerde Staatn ===
-t Dagelikse bestuur is t kollege van Gedeputeerde Staatn. De proveensie Oaveriessel hef 6 gedeputeerdn. De regering van t laand hef [[Andries Heidema]] ([[CU]]) as [[Commisaris van de Koningin|Kommissoaris van de Könning]] ansteld.
+t Dagelikse bestuur is t kollege van Gedeputeerde Staatn.<ref>[https://www.overijssel.nl/bestuur/gedeputeerde-staten/ Gedeputeerde Staten van Overijssel], provincie Overijssel</ref>
 
-Gedeputeerdn:<ref>[https://www.overijssel.nl/bestuur/gedeputeerde-staten/ Gedeputeerde Staten van Overijssel]</ref>
+De proveensie Oaveriessel hef ses gedeputeerdn. De regering van t laand hef [[Andries Heidema]] ([[CU]]) as [[Commisaris van de Koningin|Kommissoaris van de Könning]] ansteld.
+
+Gedeputeerdn:
 * [[Eddy van Hijum]] - CDA
 * [[Roy de Witte]] - CDA
 * [[Monique van Haaf]] - VVD
