/* Deputeerde Stoaten */ update

--- a/Grunnen_(provìnzie).mw
+++ b/Grunnen_(provìnzie).mw
@@ -281,13 +281,16 @@ De [[Provinzjoale Stoaten]] binnen veur t lèst kozen in 2019.
 |}
 
 === Deputeerde Stoaten ===
-t Bestuurliek zìntrum van de provìnzie is vaastegd in t historische provìnziehoes aan t [[Martinikìrkhoof]] in t Stad Grunnen. Grunnen wordt bestuurd deur n kollege van SP, CDA, D66, CU en GroenLinks. Noast Kommissoares van de Keunegin [[René Paas]] (CDA), bestaait t kollege oet:
+t Bestuurliek zìntrum van de provìnzie is vaastegd in t historische provìnziehoes aan t [[Martinikìrkhoof]] in t Stad Grunnen. Grunnen wordt bestuurd deur n kollege van GL, PvdA, CU, VVD, CDA en D66.<ref>[https://www.provinciegroningen.nl/bestuur-en-organisatie/gedeputeerde-staten/ Gedeputeerde Staten], provincie Groningen</ref>
 
-* [[Eelco Elkenaar]] (SP)
-* [[Patrick Brouns]] (CDA)
-* [[Fleur Gräper-van Koolwijk]] (D66)
-* [[Henk Staghouwer]] (CU)
-* [[Nienke Homan]] (GroenLinks)
+Noast Kommissoares van de Keunegin [[René Paas]] (CDA), bestaait t kollege oet:
+
+* [[Melissa van Hoorn]] - GL
+* [[Tjeerd van Dekken]] - PvdA
+* [[Johan Hamster]] - CU
+* [[Mirjam Wulfse]] - VVD
+* [[IJzebrand Rijzebol]] - CDA
+* [[Fleur Gräper-van Koolwijk]] - D66
 
 == Hìnwiezen ==
 * [http://www.provinciegroningen.nl/ Offisjeel webstee van de provìnzie Grunnen]
