--- a/Grunnen_(provìnzie).mw
+++ b/Grunnen_(provìnzie).mw
@@ -293,6 +293,9 @@ Noast Kommissoares van de Keunegin [[René Paas]] (CDA), bestaait t kollege oet:
 * [[Fleur Gräper-van Koolwijk]] - D66
 
 == Hìnwiezen ==
+<references/>
+
+== Boetende hìnwiezen ==
 * [http://www.provinciegroningen.nl/ Offisjeel webstee van de provìnzie Grunnen]
 * [http://www.groningen.nl/ VVV Grunnen]
 * [http://www.rtvnoord.nl/ Regionoale radio- en tvomroup, mit fotos van Grunnen]
