--- a/Frieslaand.mw
+++ b/Frieslaand.mw
@@ -43,7 +43,7 @@ De taelen die et meest praot wodden in de perveensie bin et [[Nederlaands|Nederl
 
 Deur de officiële staotus van et Fries hebben de meeste plakken in de perveensie zowel een Nederlaanse as een Friese benaeming. Pattie plakken hebben allienig een gebruukte Nederlaanse benaeming omdat ze buten et officiële Friese taelgebied valen. Van de plakken in de gemienten [[Tietjerksterediel]] en [[Dantemediel]] en de vroggere gemienten [[Ferwerderediel]], [[Boornsterhem]] en [[Littenserediel]] bin sund jaoren allienig de Friese benaemingen officieel, zoas [[Damwoolde|Damwâld]] (''Damwoolde''), [[Hardegeriep|Hurdegaryp]] (''Hardegeriep''), [[Bargum|Burgum]] (''Bargum''), [[Grouw|Grou]] (''Grouw''), [[Irnsum|Jirnsum]] (''Irnsum'') en [[Rauwerd|Raerd]] (''Rauwerd'').
 
-In et oosten van de vroggere gemiente [[Kölmerland en Nijkruusland|Kollumerlaand]] wodt et Grunnegse dialekt et [[Westerkertaaiers|Westerkertiers]] praot. In et centrum praoten nog zoe'n 200 meensken et [[Pompsters]], dit is een overgaanksdialekt tussen et [[Wooldfries]] en et [[Westerkertaaiers|Westerkertiers]]. In de [[Stellingwarven]] (de gemienten [[Weststellingwarf]] en [[Ooststellingwarf]], in et zuudoosten van de perveensie Frieslaand) wodt een [[Nedersaksisch]] dialekt praot, et [[Stellingwarfs]]. Ok buten disse greenzen wodt et Stellingwarfs praot, bi'jveurbeeld krek over de greens mit [[Lemsterlaand]], ok wodt vermoedt dat et Stellingwarfs deur inkelde duzende meensken in de rest van Nederlaand en daorbuten praot wodt.
+In et oosten van de vroggere gemiente [[Kölmerland en Nijkruusland|Kollumerlaand]] wodt et Grunnegse dialekt et [[Westerkertaaiers|Westerkertiers]] praot. In et centrum praoten nog zoe'n 200 meensken et [[Pompsters]], dit is een overgaanksdialekt tussen et [[Wooldfries]] en et [[Westerkertaaiers|Westerkertiers]]. In de [[Stellingwarven]] (de gemienten [[Weststellingwarf]] en [[Ooststellingwarf]], in et zuudoosten van de perveensie Frieslaand) wodt een [[Nedersaksisch]] dialekt praot, et [[Stellingwarfs]]. Ok buten disse greenzen wodt et Stellingwarfs praot, bi'jveurbeeld krek over de greens mit de vroggere gemiente [[Lemsterlaand]], ok wodt vermoedt dat et Stellingwarfs deur inkelde duzende meensken in de rest van Nederlaand en daorbuten praot wodt.
 
 == De 10 grootste plakken ==
 De tien grootste woonplakken in de perveensie naor et antal inwoners op [[1 febrewaori]] [[2012]] (bron: Kamer van Koophandel):
