--- a/Drenthe.mw
+++ b/Drenthe.mw
@@ -90,58 +90,159 @@ De [[Provinciaole Staoten]] bint veur 't lest kozen in meert [[2019]]. Oetslag i
 |-
 |
 {| class="wikitable sortable" style="float:left; margin-right:2em;"
-!colspan="11"| Oetslag Staotenverkiezingen 2003-2019
+!colspan="11"| Oetslag Staotenverkiezingen 2003-2019 <ref>[https://www.verkiezingsuitslagen.nl/verkiezingen?s=Provinciale+Staten&v=2003&t=2019 Verkiezingen Provinciale Staten 2003-2019], Kiesraad</ref>
 |-
 ! valign=top rowspan=2 | '''Partie''' || colspan=2 align=center | '''2003''' || colspan=2 align=center | '''2007'''|| colspan=2 align=center | '''2011'''|| colspan=2 align=center | '''2015''' || colspan=2 align=center | '''2019'''
 |-
 ! '''stemmen in %'''|| '''zetels''' || '''stemmen in %'''|| '''zetels'''|| '''stemmen in %'''|| '''zetels'''|| '''stemmen in %'''|| '''zetels''' || '''stemmen in %'''|| '''zetels'''
 |-
-|[[PvdA]]||ALIGN="right"|36,5||ALIGN="right"|19||ALIGN="right"|27,2||ALIGN="right"|13||ALIGN="right"|...||ALIGN="right"|12||ALIGN="right"|...||ALIGN="right"|7||ALIGN="right"|...||ALIGN="right"|6
+| [[PvdA]]
+| align=right | 36,5 || align=right | 19
+| align=right | 27,2 || align=right | 13
+| align=right | 26,5 || align=right | 12
+| align=right | 15,2 || align=right | 7
+| align=right | 14,1 || align=right | 6
 |-
-|[[FVD]]||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|...||ALIGN="right"|6
+| [[FVD]]
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right | 13,5 || align=right | 6
 |-
-|[[VVD]]||ALIGN="right"|18,0||ALIGN="right"|9||ALIGN="right"|16,7||ALIGN="right"|8||ALIGN="right"|...||ALIGN="right"|9||ALIGN="right"|...||ALIGN="right"|7||ALIGN="right"|...||ALIGN="right"|6
+| [[VVD]]
+| align=right | 18,0 || align=right | 9
+| align=right | 16,8 || align=right | 8
+| align=right | 19,0 || align=right | 9
+| align=right | 15,2 || align=right | 7
+| align=right | 13,1 || align=right | 6
 |-
-|[[CDA]]||ALIGN="right"|23,9||ALIGN="right"|12||ALIGN="right"|21,2||ALIGN="right"|10||ALIGN="right"|...||ALIGN="right"|6||ALIGN="right"|...||ALIGN="right"|6||ALIGN="right"|...||ALIGN="right"|5
+| [[CDA]]
+| align=right | 23,9 || align=right | 12
+| align=right | 21,2 || align=right | 10
+| align=right | 14,6 || align=right | 6
+| align=right | 14,4 || align=right | 6
+| align=right | 10,6 || align=right | 5
 |-
-|[[GroenLinks]]||ALIGN="right"|6,7||ALIGN="right"|4||ALIGN="right"|4,7||ALIGN="right"|2||ALIGN="right"|...||ALIGN="right"|2||ALIGN="right"|...||ALIGN="right"|2||ALIGN="right"|...||ALIGN="right"|4
+| [[GL]]
+| align=right | 6,7 || align=right | 4
+| align=right | 4,7 || align=right | 2
+| align=right | 5,3 || align=right | 2
+| align=right | 5,2 || align=right | 2 
+| align=right | 8,3 || align=right | 4
 |-
-|[[Partij voor de Vrijheid|PVV]]||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|...||ALIGN="right"|4||ALIGN="right"|...||ALIGN="right"|5||ALIGN="right"|...||ALIGN="right"|3
+| [[PVV]]
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right | 9,8 || align=right | 4
+| align=right | 10,9 || align=right | 5
+| align=right | 7,1 || align=right | 3
 |-
-|[[ChristenUnie]] (CU)||ALIGN="right"|4,6||ALIGN="right"|2||ALIGN="right"|7,6||ALIGN="right"|3||ALIGN="right"|...||ALIGN="right"|2||ALIGN="right"|...||ALIGN="right"|3||ALIGN="right"|...||ALIGN="right"|3
+| [[CU]]
+| align=right | 4,6 || align=right | 2
+| align=right | 7,6 || align=right | 3
+| align=right | 5,3 || align=right | 2
+| align=right | 6,4 || align=right | 3
+| align=right | 6,8 || align=right | 3
 |-
-|[[SP]]||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|12,3||ALIGN="right"|5||ALIGN="right"|...||ALIGN="right"|4||ALIGN="right"|...||ALIGN="right"|5||ALIGN="right"|...||ALIGN="right"|3
+| [[SP]]
+| align=right |  || align=right | 
+| align=right | 12,3 || align=right | 5
+| align=right | 9,7 || align=right | 4
+| align=right | 12,6 || align=right | 5
+| align=right | 6,5 || align=right | 3
 |-
-|[[D66]]||ALIGN="right"|3,7||ALIGN="right"|2||ALIGN="right"|1,9||ALIGN="right"|0||ALIGN="right"|...||ALIGN="right"|2||ALIGN="right"|...||ALIGN="right"|4||ALIGN="right"|...||ALIGN="right"|2
+| [[D66]]
+| align=right | 3,8 || align=right | 2
+| align=right | 1,9 || align=right | 0
+| align=right | 6,2 || align=right | 2
+| align=right | 9,9 || align=right | 4
+| align=right | 5,7 || align=right | 2
 |-
-|[[Sterk Lokaal]]||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|...||ALIGN="right"|1||ALIGN="right"|...||ALIGN="right"|1
+| [[Sterk Lokaal]]
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right | 3,6 || align=right | 1
+| align=right | 4,1 || align=right | 1
 |-
-|[[50Plus]]||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|...||ALIGN="right"|0||ALIGN="right"|...||ALIGN="right"|1||ALIGN="right"|...||ALIGN="right"|1
+| [[50+]]
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right | 1,8 || align=right | 0 
+| align=right | 4,0 || align=right | 1
+| align=right | 3,7 || align=right | 1
 |-
-|[[Partij voor de Dieren]]||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|1,9||ALIGN="right"|0||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|...||ALIGN="right"|1
+| [[PvdD]]
+| align=right |  || align=right | 
+| align=right | 1,9 || align=right | 0
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right | 3,4 || align=right | 1
 |-
-|[[OPD]] '''*'''||ALIGN="right"|2,1||ALIGN="right"|1||ALIGN="right"|1,4||ALIGN="right"|0||ALIGN="right"|...||ALIGN="right"|0||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|...||ALIGN="right"|0
+| [[Onafhankelijke Partij Drenthe]]
+| align=right | 2,1 || align=right | 1
+| align=right | 1,4 || align=right | 0
+| align=right | 1,1 || align=right | 0
+| align=right |  || align=right | 
+| align=right | 1,7 || align=right | 0
 |-
-|[[SGP]]||ALIGN="right"|0,3||ALIGN="right"|0||ALIGN="right"|0,3||ALIGN="right"|0||ALIGN="right"|...||ALIGN="right"|0||ALIGN="right"|...||ALIGN="right"|0||ALIGN="right"|...||ALIGN="right"|0
+| [[SGP]]
+| align=right | 0,3 || align=right | 0
+| align=right | 0,4 || align=right | 0
+| align=right | 0,5 || align=right | 0
+| align=right | 0,8 || align=right | 0
+| align=right | 0,8 || align=right | 0
 |-
-|[[Senioren Belang]]||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|...||ALIGN="right"|0
+| [[DENK]]
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right | 0,3 || align=right | 0 
 |-
-|[[DENK]]||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|...||ALIGN="right"|0
+| [[LPF]] *
+| align=right | 2,1 || align=right | 1
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
 |-
-|[[Actief Drenthe]]||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|1,9||ALIGN="right"|0||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-
+| [[Drents Belang]]/[[Drentse Ouderen Partij]]
+| align=right | 2,0 || align=right | 1
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
+| align=right |  || align=right | 
 |-
-|[[Partij voor het Noorden]]||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|1,1||ALIGN="right"|0||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-
+| overig
+| align=right |  || align=right | 
+| align=right | 4,8 || align=right | 0
+| align=right | 0,1 || align=right | 0
+| align=right | 1,8 || align=right | 0
+| align=right | 0,6 || align=right | 0
 |-
-|[[Drents Belang / DOP]] '''***'''||ALIGN="right"|2,0||ALIGN="right"|1||ALIGN="right"|0,7||ALIGN="right"|0||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-
+! Opkomst 
+! 56,1 ||
+! 51,2 ||
+! 58,7 ||
+! 51,0 ||
+! 58,8 ||
 |-
-|[[LPF]]'''**'''||ALIGN="right"|2,1||ALIGN="right"|1||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-||ALIGN="right"|-
+! Totaol
+! || 51
+! || 41
+! || 41
+! || 41
+! || 41
 |-
-!''Opkomst / totaol''||ALIGN="right"|''56,1''||ALIGN="right"|''51''||ALIGN="right"|''51,2''||ALIGN="right"|''41''||ALIGN="right"|''58,7''||ALIGN="right"|''41''||ALIGN="right"|''51,0''||ALIGN="right"|''41''||ALIGN="right"|''58,8''||ALIGN="right"|''41''
 |}
-<div style="clear:left;"></div>
-'''*''' OPD: Onafhankelijke Partij Drenthe<br />
-'''**''' LPF-fractie hernuumd tot OSD (Onafhankelijke Statenfractie Drenthe)<br />
-'''***''' DOP: Drentse Ouderen Partij
+| width="50" |
+|
+|
+|}
+
+'''*''' LPF-fractie hernuumd tot OSD (Onafhankelijke Statenfractie Drenthe).
 
 === Deputeerde Staoten ===
 't Bestuurlijke centrum van de pervincie is vestigd in [[Assen]]. Drenthe wordt bestuurd deur een college van PvdA, VVD, CDA en ChristenUnie.
