--- a/Drenthe.mw
+++ b/Drenthe.mw
@@ -180,7 +180,7 @@ De [[Provinciaole Staoten]] bint veur 't lest kozen in meert [[2019]]. Oetslag i
 | align=right |  || align=right | 
 | align=right | 3,4 || align=right | 1
 |-
-| [[Onafhankelijke Partij Drenthe]]
+| [[OPD]] *
 | align=right | 2,1 || align=right | 1
 | align=right | 1,4 || align=right | 0
 | align=right | 1,1 || align=right | 0
@@ -201,14 +201,14 @@ De [[Provinciaole Staoten]] bint veur 't lest kozen in meert [[2019]]. Oetslag i
 | align=right |  || align=right | 
 | align=right | 0,3 || align=right | 0 
 |-
-| [[LPF]] *
+| [[LPF]] **
 | align=right | 2,1 || align=right | 1
 | align=right |  || align=right | 
 | align=right |  || align=right | 
 | align=right |  || align=right | 
 | align=right |  || align=right | 
 |-
-| [[Drents Belang]]/[[Drentse Ouderen Partij]]
+| [[Drents Belang]]/[[DOP]] ***
 | align=right | 2,0 || align=right | 1
 | align=right |  || align=right | 
 | align=right |  || align=right | 
@@ -242,7 +242,9 @@ De [[Provinciaole Staoten]] bint veur 't lest kozen in meert [[2019]]. Oetslag i
 |
 |}
 
-'''*''' LPF-fractie hernuumd tot OSD (Onafhankelijke Statenfractie Drenthe).
+'* OPD: Onafhankelijke Partij Drenthe<br/ >
+'** LPF-fractie hernuumd tot OSD (Onafhankelijke Statenfractie Drenthe)<br/ >
+'*** DOP: Drentse Ouderen Partij
 
 === Deputeerde Staoten ===
 't Bestuurlijke centrum van de pervincie is vestigd in [[Assen]]. Drenthe wordt bestuurd deur een college van PvdA, VVD, CDA en ChristenUnie.
