/* Deputeerde Staoten */ update

--- a/Drenthe.mw
+++ b/Drenthe.mw
@@ -247,16 +247,15 @@ De [[Provinciaole Staoten]] bint veur 't lest kozen in meert [[2019]]. Oetslag i
 '*** DOP: Drentse Ouderen Partij
 
 === Deputeerde Staoten ===
-'t Bestuurlijke centrum van de pervincie is vestigd in [[Assen]]. Drenthe wordt bestuurd deur een college van PvdA, VVD, CDA en ChristenUnie.
-Naost de Commissaoris van de Keuningin [[Jozias van Aartsen]] besteeit 't College van [[Deputeerde Staoten]] oet:
+'t Bestuurlijke centrum van de pervincie is vestigd in [[Assen]]. Drenthe wordt bestuurd deur een college van PvdA, VVD, CDA, GL en CU.<ref>[https://www.provincie.drenthe.nl/organisatie-bestuur/gedeputeerde-staten/ Gedeputeerde Staten], provincie Drenthe</ref>
+Naost de Commissaoris van de Keunink [[Jetta Klijnsma]] (PvdA) besteeit 't College van [[Deputeerde Staoten]] oet:
 
 Deputeerden:
+* [[Nelleke Vedelaar]] - PvdA
 * [[Henk Brink]] - VVD
-* [[Ard van der Tuuk]] - PvdA (tot 8 april 2016)
 * [[Henk Jumelet]] - CDA
+* [[Hans Kuipers]] - GL
 * [[Tjisse Stelpstra]] - CU
-
-Pervinciesecretaoris: Annet van Schreven
 
 == Toerisme ==
 * [[Speulstad Oranje]]
