--- a/Gelderlaand.mw
+++ b/Gelderlaand.mw
@@ -42,140 +42,132 @@ Deur Gelderlaand löp de rivier de [[Rien]] mit zien aoftakkingen de [[Waal (rev
 == Bestuur ==
 
 === Provinsiale Staoten ===
-
-{| BORDER="0"
-|-
-|
-{| class="wikitable sortable" style="float:left; margin-right:2em;"
+{| class="wikitable sortable" style="margin-right:2em; text-align:right"
 !colspan="11"| Uitslag Staotenverkiezingen 2003-2019 <ref>[https://www.verkiezingsuitslagen.nl/verkiezingen?s=Provinciale+Staten&v=2003&t=2019 Verkiezingen Provinciale Staten 2003-2019], Kiesraad</ref>
 |-
-! valign=top rowspan=2 | '''Partie''' || colspan=2 align=center | '''2003''' || colspan=2 align=center | '''2007'''|| colspan=2 align=center | '''2011'''|| colspan=2 align=center | '''2015''' || colspan=2 align=center | '''2019'''
+! valign=top rowspan=2 | Partie || colspan=2 | 2003 || colspan=2 | 2007|| colspan=2 | 2011|| colspan=2 | 2015 || colspan=2 | 2019
 |-
-! '''stemmen in %'''|| '''zetels''' || '''stemmen in %'''|| '''zetels'''|| '''stemmen in %'''|| '''zetels'''|| '''stemmen in %'''|| '''zetels''' || '''stemmen in %'''|| '''zetels'''
+! stemmen in %|| zetels || stemmen in %|| zetels|| stemmen in %|| zetels|| stemmen in %|| zetels || stemmen in %|| zetels
 |-
-| [[VVD]]
-| align=right | 17,0 || align=right | 13
-| align=right | 16,6 || align=right | 9
-| align=right | 19,2 || align=right | 11
-| align=right | 15,8 || align=right | 9
-| align=right | 14,0 || align=right | 8
+| style="text-align:left" | [[VVD]]
+| 17,0 || 13
+| 16,6 || 9
+| 19,2 || 11
+| 15,8 || 9
+| 14,0 || 8
 |-
-| [[FVD]]
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right | 13,4 || align=right | 8
+| style="text-align:left" | [[FVD]]
+|  || 
+|  || 
+|  || 
+|  || 
+| 13,4 || 8
 |-
-| [[CDA]]
-| align=right | 31,1 || align=right | 24
-| align=right | 26,9 || align=right | 15
-| align=right | 16,2 || align=right | 9
-| align=right | 15,0 || align=right | 9
-| align=right | 11,6 || align=right | 7
+| style="text-align:left" | [[CDA]]
+| 31,1 || 24
+| 26,9 || 15
+| 16,2 || 9
+| 15,0 || 9
+| 11,6 || 7
 |-
-| [[GL]]
-| align=right | 6,6 || align=right | 5
-| align=right | 5,9 || align=right | 3
-| align=right | 6,2 || align=right | 4
-| align=right | 5,7 || align=right | 3
-| align=right | 10,8 || align=right | 6
+| style="text-align:left" | [[GL]]
+| 6,6 || 5
+| 5,9 || 3
+| 6,2 || 4
+| 5,7 || 3
+| 10,8 || 6
 |-
-| [[PvdA]]
-| align=right | 22,9 || align=right | 18
-| align=right | 17,1 || align=right | 10
-| align=right | 16,6 || align=right | 9
-| align=right | 9,0 || align=right | 6
-| align=right | 8,3 || align=right | 5
+| style="text-align:left" | [[PvdA]]
+| 22,9 || 18
+| 17,1 || 10
+| 16,6 || 9
+| 9,0 || 6
+| 8,3 || 5
 |-
-| [[D66]]
-| align=right | 3,9 || align=right | 3
-| align=right | 2,3 || align=right | 1
-| align=right | 8,1 || align=right | 4
-| align=right | 12,6 || align=right | 7
-| align=right | 7,2 || align=right | 4
+| style="text-align:left" | [[D66]]
+| 3,9 || 3
+| 2,3 || 1
+| 8,1 || 4
+| 12,6 || 7
+| 7,2 || 4
 |-
-| [[CU]]
-| align=right | 4,6 || align=right | 3
-| align=right | 8,1 || align=right | 4
-| align=right | 4,9 || align=right | 3
-| align=right | 6,1 || align=right | 4
-| align=right | 6,8 || align=right | 4
+| style="text-align:left" | [[CU]]
+| 4,6 || 3
+| 8,1 || 4
+| 4,9 || 3
+| 6,1 || 4
+| 6,8 || 4
 |-
-| [[PVV]]
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right | 10,4 || align=right | 6
-| align=right | 9,7 || align=right | 5
-| align=right | 6,1 || align=right | 3
+| style="text-align:left" | [[PVV]]
+|  || 
+|  || 
+| 10,4 || 6
+| 9,7 || 5
+| 6,1 || 3
 |-
-| [[SP]]
-| align=right | 5,6 || align=right | 4
-| align=right | 13,8 || align=right | 7
-| align=right | 9,8 || align=right | 5
-| align=right | 11,0 || align=right | 6
-| align=right | 5,8 || align=right | 3
+| style="text-align:left" | [[SP]]
+| 5,6 || 4
+| 13,8 || 7
+| 9,8 || 5
+| 11,0 || 6
+| 5,8 || 3
 |-
-| [[SGP]]
-| align=right | 5,0 || align=right | 4
-| align=right | 4,9 || align=right | 3
-| align=right | 4,6 || align=right | 2
-| align=right | 6,0 || align=right | 3
-| align=right | 5,3 || align=right | 3
+| style="text-align:left" | [[SGP]]
+| 5,0 || 4
+| 4,9 || 3
+| 4,6 || 2
+| 6,0 || 3
+| 5,3 || 3
 |-
-| [[PvdD]]
-| align=right |  || align=right | 
-| align=right | 2,2 || align=right | 1
-| align=right | 1,8 || align=right | 1
-| align=right | 3,3 || align=right | 2
-| align=right | 4,5 || align=right | 2
+| style="text-align:left" | [[PvdD]]
+|  || 
+| 2,2 || 1
+| 1,8 || 1
+| 3,3 || 2
+| 4,5 || 2
 |-
-| [[50+]]
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right | 2,0 || align=right | 1
-| align=right | 2,9 || align=right | 1
-| align=right | 3,8 || align=right | 2
+| style="text-align:left" | [[50+]]
+|  || 
+|  || 
+| 2,0 || 1
+| 2,9 || 1
+| 3,8 || 2
 |-
-| [[DENK]]
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right | 1,2 || align=right | 0
+| style="text-align:left" | [[DENK]]
+|  || 
+|  || 
+|  || 
+|  || 
+| 1,2 || 0
 |-
-| [[LPF]]
-| align=right | 2,2 || align=right | 1
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right |
+| style="text-align:left" | [[LPF]]
+| 2,2 || 1
+|  || 
+|  || 
+|  || 
+|  ||
 |-
-| overig
-| align=right | 1,3 || align=right | 0
-| align=right | 2,3 || align=right | 0
-| align=right | 0,5 || align=right | 0
-| align=right | 2,8 || align=right | 0
-| align=right | 1,3 || align=right | 0
+| style="text-align:left" | overig
+| 1,3 || 0
+| 2,3 || 0
+| 0,5 || 0
+| 2,8 || 0
+| 1,3 || 0
 |-
 ! Opkomst
-! align=right | 51,2 || align=right |
-! align=right | 48,9 || align=right |
-! align=right | 58,6 || align=right |
-! align=right | 49,9 || align=right |
-! align=right | 58,6 || align=right |
+! style="text-align:right" | 51,2 ||
+! style="text-align:right" | 48,9 ||
+! style="text-align:right" | 58,6 ||
+! style="text-align:right" | 49,9 ||
+! style="text-align:right" | 58,6 ||
 |-
 ! Totaol
-! align=right | || align=right | 75
-! align=right | || align=right | 53
-! align=right | || align=right | 55
-! align=right | || align=right | 55
-! align=right | || align=right | 55
+! || style="text-align:right" | 75
+! || style="text-align:right" | 53
+! || style="text-align:right" | 55
+! || style="text-align:right" | 55
+! || style="text-align:right" | 55
 |-
-|}
-| width="50" |
-|
-|
 |}
 
 === Gedeputeerde Staoten ===
