--- a/Oaveriessel.mw
+++ b/Oaveriessel.mw
@@ -47,134 +47,131 @@ t Gewest, dat vanof de opstaand teagn [[Philips II]] deel oetmaakn van de [[Repu
 === Proveensiale Staatn === 
 De [[Proveensiale Staatn]], t algemene bestuur van de proveensie, besteet oet 47 leedn dee alle veer joar in meert koazn wördt.
 
-{| BORDER="0"
-|-
-|
-{| class="wikitable sortable" style="float:left; margin-right:2em;"
+{| class="wikitable sortable" style="margin-right:2em; text-align:right"
 !colspan="11"| Oetslag Staatnverkiezingen 2003-2019 <ref>[https://www.verkiezingsuitslagen.nl/verkiezingen?s=Provinciale+Staten&v=2003&t=2019 Verkiezingen Provinciale Staten 2003-2019], Kiesraad</ref>
 |-
-! valign=top rowspan=2 | '''Partie''' || colspan=2 align=center | '''2003''' || colspan=2 align=center | '''2007'''|| colspan=2 align=center | '''2011'''|| colspan=2 align=center | '''2015''' || colspan=2 align=center | '''2019'''
+! valign=top rowspan=2 | Partie || colspan=2 | 2003 || colspan=2 | 2007|| colspan=2 | 2011|| colspan=2 | 2015 || colspan=2 | 2019
 |-
-! '''stemmen in %'''|| '''zetels''' || '''stemmen in %'''|| '''zetels'''|| '''stemmen in %'''|| '''zetels'''|| '''stemmen in %'''|| '''zetels''' || '''stemmen in %'''|| '''zetels'''
+! stemmen in %|| zetels || stemmen in %|| zetels|| stemmen in %|| zetels|| stemmen in %|| zetels || stemmen in %|| zetels
 |-
-| [[CDA]]
-| align=right | 37,4 || align=right | 24
-| align=right | 34,1 || align=right | 17
-| align=right | 21,4 || align=right | 11
-| align=right | 22,4 || align=right | 11
-| align=right | 17,1 || align=right | 9
+| style="text-align:left" | [[CDA]]
+| 37,4 || 24
+| 34,1 || 17
+| 21,4 || 11
+| 22,4 || 11
+| 17,1 || 9
 |-
-| [[FVD]]
+| style="text-align:left" | [[FVD]]
 | align=right |  || align=right | 
 | align=right |  || align=right | 
 | align=right |  || align=right | 
 | align=right |  || align=right | 
-| align=right | 13,3 || align=right | 6
+| 13,3 || 6
 |-
-| [[VVD]]
-| align=right | 13,7 || align=right | 9
-| align=right | 13,6 || align=right | 6
-| align=right | 15,8 || align=right | 8
-| align=right | 12,4 || align=right | 6
-| align=right | 12,9 || align=right | 6
+| style="text-align:left" | [[VVD]]
+| 13,7 || 9
+| 13,6 || 6
+| 15,8 || 8
+| 12,4 || 6
+| 12,9 || 6
 |-
-| [[GL]]
-| align=right | 5,3 || align=right | 3
-| align=right | 4,3 || align=right | 2
-| align=right | 5,1 || align=right | 2
-| align=right | 4,3 || align=right | 2
-| align=right | 9,5 || align=right | 5
+| style="text-align:left" | [[GL]]
+| 5,3 || 3
+| 4,3 || 2
+| 5,1 || 2
+| 4,3 || 2
+| 9,5 || 5
 |-
-| [[PvdA]]
-| align=right | 23,0 || align=right | 15
-| align=right | 17,9 || align=right | 9
-| align=right | 18,1 || align=right | 9
-| align=right | 10,6 || align=right | 5
-| align=right | 8,5 || align=right | 4
+| style="text-align:left" | [[PvdA]]
+| 23,0 || 15
+| 17,9 || 9
+| 18,1 || 9
+| 10,6 || 5
+| 8,5 || 4
 |-
-| [[CU]]
-| align=right | 7,5 || align=right | 4
-| align=right | 10,4 || align=right | 5
-| align=right | 7,2 || align=right | 3
-| align=right | 8,4 || align=right | 4
-| align=right | 8,3 || align=right | 4
+| style="text-align:left" | [[CU]]
+| 7,5 || 4
+| 10,4 || 5
+| 7,2 || 3
+| 8,4 || 4
+| 8,3 || 4
 |-
-| [[PVV]]
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right | 8,9 || align=right | 4
-| align=right | 9,4 || align=right | 5
-| align=right | 7,2 || align=right | 3
+| style="text-align:left" | [[PVV]]
+| || 
+| || 
+| 8,9 || 4
+| 9,4 || 5
+| 7,2 || 3
 |-
-| [[SP]]
-| align=right | 4,3 || align=right | 3
-| align=right | 11,8 || align=right | 6
-| align=right | 8,7 || align=right | 4
-| align=right | 10,7 || align=right | 5
-| align=right | 5,9 || align=right | 3
+| style="text-align:left" | [[SP]]
+| 4,3 || 3
+| 11,8 || 6
+| 8,7 || 4
+| 10,7 || 5
+| 5,9 || 3
 |-
-| [[D66]]
-| align=right | 3,3 || align=right | 2
-| align=right | 1,6 || align=right | 0
-| align=right | 7,4 || align=right | 3
-| align=right | 10,5 || align=right | 5
-| align=right | 5,8 || align=right | 3
+| style="text-align:left" | [[D66]]
+| 3,3 || 2
+| 1,6 || 0
+| 7,4 || 3
+| 10,5 || 5
+| 5,8 || 3
 |-
-| [[SGP]]
-| align=right | 3,5 || align=right | 2
-| align=right | 3,5 || align=right | 2
-| align=right | 3,4 || align=right | 2
-| align=right | 4,3 || align=right | 2
-| align=right | 3,9 || align=right | 2
+| style="text-align:left" | [[SGP]]
+| 3,5 || 2
+| 3,5 || 2
+| 3,4 || 2
+| 4,3 || 2
+| 3,9 || 2
 |-
-| [[50+]]
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right | 2,6 || align=right | 1
-| align=right | 2,9 || align=right | 1
-| align=right | 3,4 || align=right | 1
+| style="text-align:left" | [[50+]]
+| || 
+| || 
+| 2,6 || 1
+| 2,9 || 1
+| 3,4 || 1
 |-
-| [[PvdD]]
-| align=right |  || align=right | 
-| align=right | 1,7 || align=right | 0
-| align=right | 1,3 || align=right | 0
-| align=right | 2,2 || align=right | 1
-| align=right | 3,0 || align=right | 1
+| style="text-align:left" | [[PvdD]]
+| || 
+| 1,7 || 0
+| 1,3 || 0
+| 2,2 || 1
+| 3,0 || 1
 |-
-| [[DENK]]
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right | 1,2 || align=right | 0
+| style="text-align:left" | [[DENK]]
+| ||
+| ||
+| ||
+| ||
+| 1,2 || 0
 |-
-| [[LPF]]
-| align=right | 2,0 || align=right | 1
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
-| align=right |  || align=right | 
+| style="text-align:left" | [[LPF]]
+| 2,0 || 1
+| ||
+| ||
+| ||
+| ||
 |-
-| overig
-| align=right |  || align=right | 
-| align=right | 1,3 || align=right | 0
-| align=right | 0,2 || align=right | 0
-| align=right | 1,8 || align=right | 0
-| align=right |  || align=right | 
+| style="text-align:left" | overig
+| || 
+| 1,3 || 0
+| 0,2 || 0
+| 1,8 || 0
+| || 
 |-
 ! Opkomst
-! align=right | 51,7 || align=right | 
-! align=right | 49,9 || align=right | 
-! align=right | 57,7 || align=right | 
-! align=right | 49,8 || align=right | 
-! align=right | 59,3 || align=right | 
+! style="text-align:right" | 51,7 || 
+! style="text-align:right" | 49,9 || 
+! style="text-align:right" | 57,7 || 
+! style="text-align:right" | 49,8 || 
+! style="text-align:right" | 59,3 || 
 |-
 ! Totaol
-! align=right | || align=right | 63
-! align=right | || align=right | 47
-! align=right | || align=right | 47
-! align=right | || align=right | 47
-! align=right | || align=right | 47
+! || style="text-align:right" | 63
+! || style="text-align:right" | 47
+! || style="text-align:right" | 47
+! || style="text-align:right" | 47
+! || style="text-align:right" | 47
 |-
 |}
 | width="50" |
