--- a/Inheemse_Amerikanen.mw
+++ b/Inheemse_Amerikanen.mw
@@ -6,6 +6,8 @@ Et gef doezende verskeaidene stammen van Inheemse Amerikanen, dee as allemoal ö
 
 Völle hudige Amerikaanse stoaten hebt nog beheurlik wat Inheems Amerikaanse inwonners. Vuural in [[Belize]], [[Bolivia]], [[Colombia]], [[Ecuador]], [[Greunlaand]]. [[Guatemala]], [[Mexico (laand)|Mexiko]] en [[Peru]]. Der wordt sowieso mear as doezend verskillende inheemse sproaken ekuierd. Sproaken as [[Quechua]], [[Aymara]], [[Guaraní]], [[Mayaanse sproaken]] en [[Nahuatl]] hebt verskeaidene miljoenen sprekkers. Völle Inheemsen hooldt min of mear vaste an öare oolde gebroeken, zo as [[geleuf]], wodöanig as ze met mekoar umme goat en vuur leawensoonderhoold. Vake is de oolde kultuur luk an epast op de hudige tiedsgeest. Een antal inheemse volker leawt nog redelik of eslötten van de Westerse wearld. Wat volker zeent nog nooit ontdekt of an esprökken. 
 
+Native Americans zijn de oorspronkelijke Amerikanen.
+
 == Volkstrek noar de wearlddelen ==
 [[Bestaand:Spreading homo sapiens la.svg|thumb|250px|Kaarte van de eerste volkstrektochten]]
 
