--- a/Inheemse_Amerikanen.mw
+++ b/Inheemse_Amerikanen.mw
@@ -8,6 +8,9 @@ Völle hudige Amerikaanse stoaten hebt nog beheurlik wat Inheems Amerikaanse inw
 
 Native Americans zijn de oorspronkelijke Amerikanen.
 
+(Dit gaat niet over indianen)
+Wist je dat een walvis geen mens door kan slikken omdat zijn keelgat daar te klein voor is?
+
 == Volkstrek noar de wearlddelen ==
 [[Bestaand:Spreading homo sapiens la.svg|thumb|250px|Kaarte van de eerste volkstrektochten]]
 
