--- a/T_Langevenne.mw
+++ b/T_Langevenne.mw
@@ -1,4 +1,5 @@
 [[Ofbeelding:Map NL - Tubbergen - Langeveen.png|thumb|t Langnven in Tubbig]]
+[[Bestaand:Turfsteker.jpg|duum|Turfsteker]]
 '''t Langnven''' (ook wal '''t Langeven''' of '''t Langevenne''') is n doarp in de [[Tweante|Tweantse]] gemeente [[Tubbig]] in de [[Neerlaand]]se proveensie [[Oaveriessel|Oaweriessel]]. t Lig ongeveer veer kilometer op t noordn van [[Geestern]], teegn de [[Duutslaand|Duutse]] greans. Ook lig t kort bie [[Broenehaar|Broenehoar]].
 
 t Langnven hef ongevear 1272 inwonners. In t doarp zelf hef ongevear 579 leu. De [[Rooms-katholieke Karke|Roomske koarke]] is ewiedt an de [[Pancratius|H. Pancratius]].
