*Empty MediaWiki Message*

--- a/Lionel_Messi.mw
+++ b/Lionel_Messi.mw
@@ -1,5 +1,5 @@
 [[Bestaand:Lionel Messi (2009).jpg|duum|Lionel Messi (2009)]]
-'''Lionel Andrés Messi Cuccittini''' ([[Rosario]], [[24 juni]] [[1987]]) is nen Argentiensen profvootballer. Hee is anvaller en hat veur 17 joar in t eerste van [[FC Barcelona]] gespeeld. In september 2009 verlengen he zien kontrakt tot en met t seizoen 2015/16. Messi hef naost de Argentiense ok de Spaanse nationaliteit. Zienen bi'jname (skeeldname) is La Pulga (De Vlo), wat e ekreggen hef umdat e neet te laang is, maor zo vlot as [[water]].
+'''Lionel Andrés Messi Cuccittini''' ([[Rosario]], [[24 juni]] [[1987]]) is nen Argentiensen profvootballer. Hee is anvaller en hat veur 17 jaar in t eerste van [[FC Barcelona]] gespeeld. In september 2009 verlengen he zien kontrakt tot en met t seizoen 2015/16. Messi hef naost de Argentiense ok de Spaanse nationaliteit. Zienen bi'jname (skeeldname) is La Pulga (De Vlo), wat e ekreggen hef umdat e neet te laang is, maor zo vlot as [[water]]. Lionel Messi speelt sinds juni 2020 voor Paris saint German
 
 {{Dialekt|act}}
 
