--- a/Nedersaksische_veurnamen.mw
+++ b/Nedersaksische_veurnamen.mw
@@ -1,6 +1,6 @@
 {{etelazie}}
 {{Zie dv|Zie ok [[Nedersaksische achternamen]], [[Nedersaksische bijnamen]] en [[Tweantse skeeldnaamns]].}}
-Hieronder vie-j een lieste mit '''[[Nedersaksisch]]e veurnamen'''. In Nederlaand bint de officiële deupnamen vake al ieuwen an 't Standaardnederlaands an-epast. Zo wördden iene, die in 't dagense lèven Annechien enuumd wördden, vake (mar niet altied) edeupt as 'Annigje'.
+Hieronder een lijst met '''[[Nedersaksisch]]e voornamen'''. In Nederland zijn de officiële doopnamen vaak al eeuwen aan het Standaardnederlands angepast. Zo worden iemand, die in 't dagelijkse leven Annechien genoemd wordt, vaak (maar niet altijd) gedoopt als 'Annigje'.
 
 ==[[Drenthe]], [[Kop van Overiessel]], [[Sallaand]]==
 
